Add precache endpoint to v2 API
Bug: https://phabricator.wikimedia.org/T148714
